# market

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  k8s.yaml  todo.md
.cargo/: config
deployment/: market.yaml  single.yaml
examples/: async_publisher.rs  simple_latency.rs  simple_latency_bus.rs  simple_latency_crossbeam.rs  simple_latency_zmqsbe.rs  sync_publisher.rs
proper_market_api/: Cargo.toml
proper_market_api/src/: asset.rs  bbo_msg_codec.rs  dec_codec.rs  exchange.rs  group_size_encoding_codec.rs  instrument_codec.rs  instrument_type.rs  lib.rs  message_header_codec.rs  orderbook_flags.rs  orderbook_msg_codec.rs  symbol_codec.rs  symbol_type.rs  trade_msg_codec.rs
src/: env_var.rs  lib.rs  message.rs
src/api/: market_listener.rs  mod.rs
src/data/: controller.rs  mbp_handler.rs  mod.rs  orderbook.rs  publisher.rs
src/data/exchange/binance/: mod.rs  serde.rs
src/data/exchange/binance/async/: bbo.rs  mod.rs  orderbook.rs  trade.rs
src/data/exchange/binance/sync/: bbo.rs  mod.rs  trade.rs
src/data/exchange/ftx/: serde.rs
src/data/exchange/ftx/async/: bbo.rs  mod.rs  trade.rs
src/data/exchange/ftx/sync/: bbo.rs  mod.rs  trade.rs
src/structs/: exchange.rs  instrument.rs  market_price.rs  mod.rs  quotes.rs  symbol.rs  trades.rs
src/util/: mod.rs  symbol.rs  websocket.rs
src/util/orderbook/: depth.rs  error.rs  mod.rs  orderbook.rs
