[package]
name = "market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
simple_logger = { version = "2.1", features = ["timestamps"] }
axum = "0.5"

[dependencies]
bus = "2.2.3"
chrono = "0.4"
crossbeam-channel = "0.5.2"
http = "0.2"
log = { version = "0.4" } # , features = ["kv_unstable"] }
lazy_static = "1.4"
proper_ma_api = { git = "ssh://git@github.com/sovon-l/ma_definition", package = "proper_ma_api" }
proper_ma_structs = { git = "ssh://git@github.com/sovon-l/ma_definition", package = "proper_ma_structs" }
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
simd-json = "0.4"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
zmq = "0.9"
futures-util = "0.3"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
messenger = { git = "ssh://git@github.com/sovon-l/messenger", package = "messenger" }